tests/netperf/isilon_40G/tcp_100/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.9 10.9 11.8 11.8 13.4 12.9 13.8 13.6 14.4 14.0 14.7 14.0 15.1 14.7 15.9 15.1 16.3 15.3 16.3 15.3 16.2 15.4 16.2 15.7 16.4 16.1 17.1 16.6 17.6 18.7 18.1 19.1 18.3 19.5 18.8 19.8 19.0 19.7 19.1 19.8 18.7 19.9 18.9 20.2 19.1 20.2 19.6 20.5 19.3 20.0 18.8 19.7 19.2 20.1 19.2 19.9 19.0 19.9 18.7 19.4 18.4 19.3 18.8 20.1 19.3 20.1 19.0 19.8 18.7 19.6 18.5 19.4 18.8 19.7 18.6 19.3 18.6 19.4 18.3 19.2 18.4 19.4 18.6 19.2 18.4 19.0 18.5 19.4 18.4 19.4 18.2 19.4 19.9 19.0 19.9 18.8 19.9 18.9 20.0
average: 17.9121
zephram-1# 







────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 1.0                         
[ipfwd] starting
current:  9.387%, error:  9.4%, probability:  1.000%
current:  10.632%, error:  1.2%, probability:  1.000%
current:  11.780%, error:  1.1%, probability:  1.000%
current:  10.834%, error:  0.9%, probability:  1.000%
current:  9.961%, error:  0.9%, probability:  1.000%
current:  11.163%, error:  1.2%, probability:  1.000%
current:  10.266%, error:  0.9%, probability:  1.000%
current:  10.443%, error:  0.2%, probability:  1.000%
current:  9.601%, error:  0.8%, probability:  1.000%
current:  9.833%, error:  0.2%, probability:  1.000%
current:  10.040%, error:  0.2%, probability:  1.000%
current:  11.237%, error:  1.2%, probability:  1.000%
current:  12.335%, error:  1.1%, probability:  1.000%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 




────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 60 -H 7.7.7.2 -t TCP_STREAM
MIGRATED TCP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 7.7.7.2 (7.7.7.2) port 0 AF_INET
Recv   Send    Send                          
Socket Socket  Message  Elapsed              
Size   Size    Size     Time     Throughput  
bytes  bytes   bytes    secs.    10^6bits/sec  

131072 131072 131072    60.01    2593.93   
zephram-2# 











────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf
^C
10.0 10.5 10.8 11.4 10.6 12.8 11.9 12.9 11.9 12.9 13.0 14.7 14.5 14.9 15.7 18.1 16.9 17.7 17.3 18.0 17.1 17.7 16.8 18.3 17.5 18.2 17.3 17.7 16.8 17.7 16.9 17.7 16.7 17.7 17.1 17.6 16.9 17.6 16.9 17.7 16.9 18.2 17.3 18.7 19.3 18.4 19.2 17.9 18.0 16.7 17.2 15.8 16.0 16.3 15.1 15.4 14.7 15.4 14.3 14.7 15.3 14.8 16.3 15.6 16.1 15.5 17.1 16.0 16.6 16.1 17.0 17.1 18.5 17.8 18.9 18.1 18.9 18.3 19.3 18.4 19.4 18.6 19.4 18.8 19.3 18.9 19.8 18.9 19.7 18.9 20.3 19.2 20.4 19.3 20.2 19.1 20.2 19.0 20.1 20.8 20.1 20.7 19.8 20.5 20.1 20.8 19.6 20.3 19.6
average: 17.1872
zephram-2# 

